# 2to2CollisionWidth

./: .clang-format  .gitignore  2to2.cpp  2to2collisionwidth.cpp  2to2collisionwidth.hpp  Amplitudes.m  CMakeLists.txt  constants.hpp  matplotlibcpp.h  numerics.cpp  numerics.hpp
